[package]
name = "place-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
csv = "1.2.2"
flate2 = "1.0.26"
futures = "0.3.28"
indicatif = "0.17.5"
itertools = "0.11.0"
json = "0.12.4"
num_enum = "0.6.1"
rayon = "1.7.0"
serde = { version = "1.0.175", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"] }
subprocess = "0.2.9"
tokio = { version = "1.29.1", features = ["full"] }
